Fix gallery layout on mobile

--- a/src/assets/styles/components/gallery.scss
+++ b/src/assets/styles/components/gallery.scss
@@ -1,68 +1,72 @@
  .gallery-grid {
-   gap    : var(--space-xs);
+   gap: var(--space-xs);
    columns: 25ch;
 
-   &.symmetrical {
-     display              : grid;
-     grid-template-columns: repeat(auto-fill, minmax(min(25ch, 100%), 1fr));
-     grid-auto-rows       : 1fr auto;
+   &:has(> :only-child) {
+     columns: 1;
+   }
 
-     &>div:not([class]) {
+   &.symmetrical {
+     display: grid;
+     grid-template-columns: repeat(auto-fill, minmax(min(25ch, 100%), 1fr));
+     grid-auto-rows: 1fr auto;
+
+     & > div:not([class]) {
        display: contents;
      }
    }
-   
+
    &.fixed-columns {
-      grid-template-columns: repeat(auto-fill, minmax(30ch, 1fr));
-  }
+     grid-template-columns: repeat(auto-fill, minmax(30ch, 1fr));
+   }
  }
 
  .gallery-entry-link {
-   outline           : none;
-   text-decoration   : none;
-   display           : grid;
+   outline: none;
+   text-decoration: none;
+   display: grid;
    grid-template-rows: subgrid;
-   grid-row          : span 2;
+   grid-row: span 2;
 
    .gallery-entry {
      display: contents;
    }
 
    .gallery-entry__cover-image {
-     outline       : 5px solid hsl(var(--primary-700) / 0);
+     outline: 5px solid hsl(var(--primary-700) / 0);
      outline-offset: 2ch;
-     transition    : outline 200ms, outline-offset 200ms;
+     transition: outline 200ms, outline-offset 200ms;
    }
 
    &:focus-visible {
      .gallery-entry__cover-image {
-       outline       : 5px solid hsl(var(--primary-500));
+       outline: 5px solid hsl(var(--primary-500));
        outline-offset: 0;
      }
    }
  }
 
  .gallery-entry {
-   display           : grid;
+   display: grid;
    grid-template-rows: 1fr min-content;
-   break-inside      : avoid;
-   break-after       : avoid;
-   break-before      : avoid;
+   break-inside: avoid;
+   break-after: avoid;
+   break-before: avoid;
 
    &__cover-image {
-     grid-row     : 1/2;
-     grid-column  : 1/2;
-     width        : 100%;
-     height       : 100%;
-     object-fit   : cover;
+     grid-row: 1/2;
+     grid-column: 1/2;
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
      border-radius: var(--ideal-radius);
-     box-shadow   : 0 5px 20px #0003;
-     max-height   : calc(25ch * (3/2));
+     box-shadow: 0 5px 20px #0003;
+     max-height: calc(25ch * (3/2));
    }
 
    &__headline {
      font-size: var(--type-size-4);
-     margin   : 0;
+     margin: 0;
    }
 
    &__subtitle {
@@ -70,9 +74,9 @@
    }
 
    &__metadata {
-     color      : hsl(var(--fg-default));
+     color: hsl(var(--fg-default));
      font-family: var(--font-sans);
-     margin     : 0;
+     margin: 0;
    }
 
    &__body {
@@ -81,16 +85,16 @@
  }
 
  .gallery-card {
-   break-after : avoid;
+   break-after: avoid;
    break-before: avoid;
    break-inside: avoid;
-   display     : inline-grid;
-   margin      : 0;
+   display: inline-grid;
+   margin: 0;
 
-   &>* {
+   & > * {
      align-items: end;
      grid-column: 1/2;
-     grid-row   : 1/2;
+     grid-row: 1/2;
    }
 
    img {
@@ -98,57 +102,57 @@
    }
 
    &__caption {
-     align-items        : start;
-     background-color   : transparent;
-     background-image   : radial-gradient(circle at top right, hsl(var(--bg-primary)) 25%, hsl(var(--bg-primary)/0));
+     align-items: start;
+     background-color: transparent;
+     background-image: radial-gradient(circle at top right, hsl(var(--bg-primary)) 25%, hsl(var(--bg-primary)/0));
      background-position: top right;
-     background-size    : 150%;
-     display            : flex;
-     flex-direction     : column;
-     font-family        : var(--font-sans);
-     font-size          : var(--type-size-6);
-     gap                : 1ch;
-     height             : 100%;
-     justify-content    : start;
-     opacity            : 0;
-     padding            : var(--space);
-     pointer-events     : none;
-     text-align         : end;
-     transition         : opacity 200ms;
+     background-size: 150%;
+     display: flex;
+     flex-direction: column;
+     font-family: var(--font-sans);
+     font-size: var(--type-size-6);
+     gap: 1ch;
+     height: 100%;
+     justify-content: start;
+     opacity: 0;
+     padding: var(--space);
+     pointer-events: none;
+     text-align: end;
+     transition: opacity 200ms;
 
      @media (max-width: 960px) {
        display: none;
      }
 
      p {
-       margin             : 0;
+       margin: 0;
        margin-inline-start: auto;
-       max-width          : 75%;
+       max-width: 75%;
      }
    }
 
    &__link {
      cursor: zoom-in;
 
-     &:focus-visible+.gallery-card__caption,
-     &:hover+.gallery-card__caption {
+     &:focus-visible + .gallery-card__caption,
+     &:hover + .gallery-card__caption {
        opacity: 1;
      }
    }
  }
 
  @keyframes appear {
-  from {
-    opacity: 0;
-    scale: 0.8;
-    translate: 0 20%;
-  }
+   from {
+     opacity: 0;
+     scale: 0.8;
+     translate: 0 20%;
+   }
 
-  to {
-    opacity: 1;
-    scale: 1;
-    translate: 0 0;
-  }
+   to {
+     opacity: 1;
+     scale: 1;
+     translate: 0 0;
+   }
  }
 
  /* .gallery-card {
